# vi-video

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
docs/: ffmpeg.MD  whisper.MD
samples/: jfk.edited.txt  jfk.json  jfk.txt  jfk.wav.edited.txt  jfk.wav.srt  jfk.wav.txt  words.txt
script/: blend.sh  concat.sh  convert2wav.sh
src/vivideo/: align.py  compact.py  edit.py  transcribe.py
tests/: conftest.py  test_align.py  test_compact.py  test_transcribe.py
